--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
 
 	<groupId>org.gov4j.govpay</groupId>
 	<artifactId>govpay-bom</artifactId>
-	<version>1.1.1</version>
+	<version>1.1.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>GovPay BOM</name>
 	<description>Parent POM for dependency version management across GovPay projects</description>
-	<url>https://gov4j.org/maven/govpay/govpay-bom/1.1.1</url>
+	<url>https://gov4j.org/maven/govpay/govpay-bom/1.1.2-SNAPSHOT</url>
 
 	<licenses>
 		<license>
@@ -57,6 +57,7 @@
 
         <!-- Spring -->
         <spring-boot.version>3.5.9</spring-boot.version>
+        <tomcat.version>10.1.52</tomcat.version>
         <spring-framework.version>6.2.15</spring-framework.version>
         <spring-security.version>6.5.7</spring-security.version>
         <spring-data.version>2025.1.2</spring-data.version>
@@ -142,6 +143,23 @@
 
     <dependencyManagement>
         <dependencies>
+            <!-- Tomcat (override CVE-2026-24734) -->
+            <dependency>
+                <groupId>org.apache.tomcat.embed</groupId>
+                <artifactId>tomcat-embed-core</artifactId>
+                <version>${tomcat.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.tomcat.embed</groupId>
+                <artifactId>tomcat-embed-el</artifactId>
+                <version>${tomcat.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.tomcat.embed</groupId>
+                <artifactId>tomcat-embed-websocket</artifactId>
+                <version>${tomcat.version}</version>
+            </dependency>
+
             <!-- Spring Boot BOM -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
